--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,8 @@ jobs:
     steps:
       - name: Get code
         uses: actions/checkout@v3
-      - name: actions/setup-node@v3
+      - name: Install Node
+        uses: actions/setup-node@v3
         with:
           node-version: 18
       - name: Install dependencies
